--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/web/node_modules
 /.pnp
 .pnp.js
+/server/node_modules
 
 # testing
 /coverage
